[package]
name = "trx_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"]}
serenity = {default-features = false, features = ["client", "collector", "gateway", "model", "rustls_backend", "framework", "standard_framework"], version = "0.11"}
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
rand = "0.8.5"
