[package]
name = "trx_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"]}
dotenv = "0.15"
rand = "0.8.5"
poise = "0.5.5"
log = "0.4.19"
env_logger = "0.10.0"
reqwest = "0.11"
serde_json = "1.0.99"
chrono = "0.4.26"
rusqlite = { version = "0.29.0", features = ["bundled"] }
factordb = "0.2.0"
